# save_masters

clustering/: Calc_Dunn_Index.m  Calc_Dunn_Index_mex.mexw64  Calc_Dunn_index.prj  Calc_Optimal_Clust_Num.m  Calculate_DBCV_index.m  Connect_All_Clusters.m  Estimate_Epsilon.m  FS_small_dataset_results_all_feats_eps_0_01_to_0_06_and_Nmin_20_to_40.mat  FS_small_dataset_results_all_feats_eps_0_01_to_0_06_and_Nmin_9_to_20.mat  FS_small_dataset_results_eps_0_01_to_0_06_and_Nmin_30_to_60.mat  FS_small_dataset_results_eps_0_06_to_0_1_and_Nmin_20_to_40.mat  FS_small_dataset_results_eps_0_06_to_0_1_and_Nmin_30_to_60.mat  FS_small_dataset_results_eps_0_06_to_0_1_and_Nmin_30_to_60_0_06_0_1.mat  FS_small_dataset_results_eps_0_06_to_0_1_and_Nmin_5_to_20.mat  Feature_Selection_with_Voting_scheme.m  Get_Distinct_Subsets.m  Grade_Feature_Subset.m  Intersect_All_Labels.asv  Intersect_All_Labels.m  My_Estimate_Epsilon.m  OpticsData.m  PrintMethods.m  Remove_Math_Correlated_Subsets.m  Show_Feature_Number.m  Show_emission_waveforms_of_clusters.m  Test_Optics.asv  Test_Optics.m  UnsupervisedLearning.m  best_distinct_subsets.m  big_dataset_feature_selection_with_DBCV_for_Nmin_0_10_Eps_0_0_06946.mat  big_dataset_feature_selection_with_DBCV_for_Nmin_0_10_Eps_0_0_06946_tpff62f8de_3a6e_410b_9509_db3e3e16b887.mat  big_dataset_feature_selection_with_DBCV_for_Nmin_100_100_Eps_-0_013125_0_12957.mat  big_dataset_feature_selection_with_DBCV_for_Nmin_10_10_Eps_-0_0037595_0_06946.mat  big_dataset_feature_selection_with_DBCV_for_Nmin_15_15_Eps_-0_022097_0_080578.mat  big_dataset_feature_selection_with_DBCV_for_Nmin_15_15_Eps_-0_052097_0_11058.mat  big_dataset_feature_selection_with_DBCV_id_tp00fe7cab_af51_45a5_9dc7_798b18087538.mat  big_dataset_feature_selection_with_DBCV_id_tp0bb745bb_77f0_4b1d_bf6d_4b31a322cede.mat  big_dataset_feature_selection_with_DBCV_id_tp2f8f588c_e987_4df4_bb05_12cddcee21d6.mat  big_dataset_feature_selection_with_DBCV_id_tp9b49223a_12b6_4369_acbd_16d024f85c98.mat  big_dataset_feature_selection_with_DBCV_id_tpb0145e3a_2b8e_47a7_be72_cd2af841b9d0.mat  (+84 more)
clustering/DBCV_index/: DBCV_calc.py
feature_selection/: calc_AE_rate_and_derivations.m  featureExtraction.asv  featureExtraction.m  seperatedPCA.m
preprocessing/: Calc_Bin_Envelope.asv  Calc_Bin_Envelope.m  Calc_Max_Of_Emissions.m  Calc_Valid_Signal_Ranges.m  Calculate_Signal_Features.asv  Calculate_Signal_Features.m  Comparing_findpeaks_with_peakfreq.m  EqalizationFIlterArrayInC.txt  EqualizationFilter.asv  EqualizationFilter.m  Equalize.m  Expand_Around_Max.m  Expand_Signal.m  FeatureCalculation.m  Filter_LF_Interference.m  Filter_Unwanted_Freq.m  Find_Outliers.m  Get_Dataset_Paths.m  Get_Emission_From_Signal.asv  Get_Emission_From_Signal.m  Get_High_Bit_Positions.m  Must_Define_Time_If_True.m  Normalize_Features.asv  Normalize_Features.m  Only_document_preprocessing.m  Plot_All_Equ.m  Plot_Emission_Stats.m  Show_Freq_Spectrum.m  TryConv.m  Try_z_score.m  Write_limits_of_datasets_to_word.m  calc_AE_rate_and_derivations.m  exp_10_part_1_feature_selection_with_DBCV_for_Nmin_10_10_Eps_0_01791_0_1243_tpc2e4f49a_1e92_4d6a_b5cc_1ead4d152cd7.mat  exp_10_part_1_feature_selection_with_DBCV_id_tpc2e4f49a_1e92_4d6a_b5cc_1ead4d152cd7.mat  exp_10_part_1_feature_selection_with_DBCV_single_clust_for_Nmin_10_10_Eps_0_01791_0_1243_tpc2e4f49a_1e92_4d6a_b5cc_1ead4d152cd7.mat  exp_10_part_2_feature_selection_with_DBCV_for_Nmin_0_10_Eps_0_0_073616_tp4b748707_7103_4ce9_bb19_02b52ffb9dce.mat  exp_10_part_2_feature_selection_with_DBCV_id_tp4b748707_7103_4ce9_bb19_02b52ffb9dce.mat  exp_10_part_2_feature_selection_with_DBCV_single_clust_for_Nmin_0_10_Eps_0_0_073616_tp4b748707_7103_4ce9_bb19_02b52ffb9dce.mat  exp_14_part_1_feature_selection_with_DBCV_for_Nmin_10_10_Eps_0_029184_0_11363_tp33e5a0d3_95be_4dd9_ab7e_7dffc39ba017.mat  (+25 more)
stm32_code_changes/: find_peaks.c
stm32_code_changes/ADC_Comm_DMA_LP/: .mxproject  ADC_Comm_DMA_LP.ioc  CMakeLists.txt
stm32_code_changes/ADC_Comm_DMA_LP/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_tim.h
stm32_code_changes/ADC_Comm_DMA_LP/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_ospi.c  stm32l4xx_hal_pwr.c  stm32l4xx_hal_sd.c  stm32l4xx_ll_sdmmc.c
stm32_code_changes/ADC_Comm_DMA_LP/Inc/: bsp_driver_sd.h  ffconf.h  main.h  optics.h  optics.h.gch  scheduler.h  scheduler.h.gch  setup.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h.gch
stm32_code_changes/ADC_Comm_DMA_LP/Inc/Backup/: main.h.bak  stm32l4xx_hal_conf.h.bak
stm32_code_changes/ADC_Comm_DMA_LP/MDK-ARM/: ADC_Comm_DMA.uvguix.fran  ADC_Comm_DMA_LP.uvguix.bujak  ADC_Comm_DMA_LP.uvguix.fran  ADC_Comm_DMA_LP.uvoptx  ADC_Comm_DMA_LP.uvprojx  ADC_Comm_DMA_cont.uvguix.fran  ADC_Comm_octoint.uvguix.fran  JLinkSettings.ini  Packs_UAE_config_SPI_v01.htm  pd1_ekg.csv  pd2_ekg.csv  startup_stm32l4r7xx.lst  startup_stm32l4r7xx.s
stm32_code_changes/ADC_Comm_DMA_LP/MDK-ARM/DebugConfig/: UAE_config_SPI_v01_STM32L4R7VITx.dbgconf
stm32_code_changes/ADC_Comm_DMA_LP/MDK-ARM/RTE/_UAE_config_SPI_v01/: RTE_Components.h
stm32_code_changes/ADC_Comm_DMA_LP/MDK-ARM/UAE_config_SPI_v01/: ADC_Comm_DMA_LP_UAE_config_SPI_v01.dep  UAE_config_SPI_v01.axf  UAE_config_SPI_v01.build_log.htm  UAE_config_SPI_v01.hex  UAE_config_SPI_v01.htm  UAE_config_SPI_v01.lnp  UAE_config_SPI_v01.map  basicmathfunctions.crf  bayesfunctions.crf  bsp_driver_sd.crf  bsp_driver_sd.d  ccsbcs.crf  ccsbcs.d  commontables.crf  complexmathfunctions.crf  controllerfunctions.crf  diskio.crf  diskio.d  distancefunctions.crf  fastmathfunctions.crf  fatfs.crf  fatfs.d  ff.crf  ff.d  ff_gen_drv.crf  ff_gen_drv.d  filteringfunctions.crf  main.crf  main.d  matrixfunctions.crf  optics.crf  optics.d  scheduler.crf  scheduler.d  sd_diskio.crf  sd_diskio.d  setup.crf  setup.d  startup_stm32l4r7xx.d  statisticsfunctions.crf  (+54 more)
stm32_code_changes/ADC_Comm_DMA_LP/Src/: bsp_driver_sd.c  main.c  optics.c  scheduler.c  sd_diskio.c  setup.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
stm32_code_changes/ADC_Comm_DMA_LP/Src/Backup/: main.c.bak  sensirion_hw_i2c_implementation.c.bak  stm32l4xx_hal_msp.c.bak  stm32l4xx_it.c.bak
(+277 files in other folders)
